# cabin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
crates/cabin/: Cargo.toml  Makefile  README.md
crates/cabin-bin/: Cargo.toml  Makefile  README.md
crates/cabin-bin/builds/: linux-x86_64-cabin
crates/cabin-bin/src/: main.rs  snippet.rs  theme.rs
crates/cabin-bin/src/commands/: build.rs  check.rs  interactive.rs  mod.rs  new.rs  run.rs
crates/cabin-bin/tests/dev/: cabin.toml  output.c
crates/cabin-bin/tests/dev/src/: main.cabin
crates/cabin-language-server/: Cargo.toml  Makefile  README.md  log.md
crates/cabin-language-server/scripts/: build
crates/cabin-language-server/src/: main.rs
crates/cabin-language-server/src/lsp/: mod.rs
crates/cabin-language-server/src/lsp/text_document/: diagnostics.rs  did_change.rs  hover.rs  mod.rs
crates/cabin-llvm/: Cargo.toml
crates/cabin-web/: Cargo.toml
crates/cabin-web/scripts/: build
crates/cabin-web/src/: lib.rs
crates/cabin/src/: bin.rs  lib.rs
crates/cabin/src/api/: builtin.rs  config.rs  context.rs  diagnostics.rs  io.rs  macros.rs  mod.rs  project.rs  scope.rs  span.rs  theme.rs  traits.rs
crates/cabin/src/ast/: mod.rs
crates/cabin/src/ast/expressions/: action.rs  block.rs  choice.rs  either.rs  extend.rs  field_access.rs  foreach.rs  function_call.rs  function_declaration.rs  group.rs  identifier.rs  if_expression.rs  literal.rs  mod.rs  name.rs  new.rs  new_literal.rs  object.rs  oneof.rs  operators.rs  parameter.rs  run.rs  unary.rs  while_loop.rs
crates/cabin/src/ast/misc/: mod.rs  module.rs  program.rs  tag.rs
crates/cabin/src/ast/statements/: declaration.rs  mod.rs  tail.rs
crates/cabin/src/ast/sugar/: list.rs  mod.rs  string.rs
crates/cabin/src/cli/: theme.rs
crates/cabin/src/cli/commands/: run.rs
crates/cabin/src/compiler/: mod.rs
crates/cabin/src/comptime/: memory.rs  mod.rs
crates/cabin/src/interpreter/: mod.rs
crates/cabin/src/lexer/: mod.rs
crates/cabin/src/parser/: mod.rs
crates/cabin/src/parser/expressions/: block.rs  either.rs  extend.rs  field_access.rs  foreach.rs  function_call.rs  function_declaration.rs  group.rs  if_expression.rs  literal.rs  match_expression.rs  mod.rs  name.rs  object.rs  oneof.rs  operators.rs  parameter.rs  run.rs  unary.rs
crates/cabin/src/parser/expressions/sugar/: list.rs  string.rs
crates/cabin/src/parser/statements/: declaration.rs  mod.rs  tag.rs  tail.rs  use_extend.rs
crates/cabin/src/transpiler/: mod.rs
crates/cabin/src/typechecker/: mod.rs
crates/cabin/std/: prelude.cabin  stdlib.cabin
crates/cabin/tests/dev/src/: main.cabin
crates/tree-sitter-cabin/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  bun.lockb  go.mod  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
crates/tree-sitter-cabin/bindings/c/: tree-sitter-cabin.pc.in
crates/tree-sitter-cabin/bindings/go/: binding.go  binding_test.go
crates/tree-sitter-cabin/bindings/node/: binding.cc  index.js
crates/tree-sitter-cabin/bindings/python/tests/: test_binding.py
crates/tree-sitter-cabin/bindings/python/tree_sitter_cabin/: __init__.py  binding.c
crates/tree-sitter-cabin/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-cabin/bindings/swift/TreeSitterCabin/: cabin.h
crates/tree-sitter-cabin/bindings/swift/TreeSitterCabinTests/: TreeSitterCabinTests.swift
crates/tree-sitter-cabin/queries/: highlights.scm
crates/tree-sitter-cabin/scripts/: nvim
crates/tree-sitter-cabin/src/: grammar.json  node-types.json  parser.c
crates/wasm-fields/: Cargo.toml  README.md
crates/wasm-fields/src/: lib.rs
crates/wasm-fields/tests/: test.rs
