[package]
name = "cabin-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cabin"
path = "src/main.rs"

[dependencies]
cabin = { path = "../cabin" }
tree-sitter-cabin = { path = "../tree-sitter-cabin/" }
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
enum_dispatch = "0.3.13"
tree-sitter = "0.25.2"
pathdiff = "0.2.3"

[build-dependencies]
cc = "*"
