[package]
name = "cabin-bin"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "cabin"
path = "src/main.rs"

[dependencies]
tree-sitter-cabin.workspace = true
cabin.workspace = true
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
enum_dispatch = "0.3.13"
pathdiff = "0.2.3"
cliclack = "0.3.5"
toml_edit = "0.22.24"
which = "7.0.2"
tree-sitter = "0.26.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[lints]
workspace = true
