[package]
name = "cabin-language-server"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
cabin.workspace = true
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
indoc = "2.0.5"
url = "2.5.4"
directories = "6.0.0"
gag = "1.0.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[lints]
workspace = true