[package]
name = "cabin"
description = "A dead simple, extremely performant, and completely safe programming language."
categories = ["compilers", "parser-implementations"]
keywords = ["cabin", "language", "compiler"]
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.93"
colored = "3.0.0"
convert_case = "0.6.0"
derive-getters = "0.5.0"
indexmap = "2.7.1"
regex-macro = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-inline-default = "0.2.3"
smart-default = "0.7.1"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.11"
toml_edit = { version = "0.22.22", features = ["serde"] }
try_as = "0.1.0"
wasm-bindgen = "0.2.100"

[lints]
workspace = true