[package]
name = "tree-sitter-cabin"
description = "Cabin grammar for tree-sitter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cabin"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/language-cabin/tree-sitter-cabin"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.26.9"
