[package]
name = "wasm-fields"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"

[lib]
proc-macro = true

[dev-dependencies]
wasm-bindgen = "0.2.123"

[lints]
workspace = true
